<resources>
    <string name="app_name">Skincap</string>

    <!-- Bottom Navigation -->
    <string name="home">Home</string>
    <string name="check_skin">Check Skin</string>
    <string name="journal">Journal</string>
    <string name="library">Library</string>
    <!-- Fragments -->
    <string name="start_your_skin_care_journey">Start your Skin Care Journey</string>
    <string name="discover_your_skin">Discover your skin for your\nskin care journey</string>
    <!--OnBoarding Screen -->
    <string name="first_slide_title">Welcome to SkinCap!</string>
    <string name="second_slide_title">Snap, Analyze, Manage</string>
    <string name="third_slide_title">Skin Journal</string>
    <string name="fourth_slide_title">Product Recommendations</string>
    <!-- Descriptions -->
    <string name="first_slide_desc">Image Processing for Skin Care Recommender with Skin Analyzer</string>
    <string name="second_slide_desc">Detect skin type and issue by taking\nphotos or import from your gallery</string>
    <string name="third_slide_desc">Create journal with your \nentries to track your skin care progress</string>
    <string name="fourth_slide_desc">Get personalized recommendations\nbased on your skin type and skin care\ningredients</string>
    <!--Buttons-->
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="get_started">GET STARTED</string>
    <string name="save_journal">SAVE</string>
    <string name="cancel_journal">CANCEL</string>
    <string name="check_your_skin">Check your Skin</string>
    <!-- Home -->
    <string name="list_skin_type">Skin Types</string>
    <string name="list_skin_issues">Skin Issues</string>
    <string name="list_skin_ingredients">Skin Ingredients</string>
    <!--Create Journal -->
    <string name="skin_issue">Skin Issue:</string>
    <string name="skin_issue_name">ACNE</string>
    <string name="include_photo">Include Photo</string>
    <string name="start_date">Start Date</string>
    <string name="expect_date">Goal Date</string>
    <string name="select_time">Record Time</string>
    <string name="notes">NOTES</string>
    <string name="insert_notes">Insert notes</string>
    <!-- Info -->
    <string name="skin_cap_desc">SkinCap is a system for the researcher’s thesis\nas a partial requirement in\n
        Bachelor of Science in Computer Science\nin FEU TECH.</string>
    <string name="dev_1_name">Erika Paula S. Lim</string>
    <string name="dev_2_name">Jean Darren F. Limbo</string>
    <string name="dev_3_name">Emmanuel M. Peradilla</string>
    <string name="dev_4_name">Pauline Dominique R. Andoloy</string>
    <string name="dev_1_desc">Project Manager </string>
    <string name="dev_2_desc">Web and Mobile Developer\nFront-end Specialist</string>
    <string name="dev_3_desc">Founder of SkinCap \nAlgorithm and Back-end Developer </string>
    <string name="dev_4_desc">System Content Designer\n</string>
    <string name="client_desc">DTI BIR FDA IPO Vegan Cruelty Free \nIg: elixirheaven \nTiktok: elixirheaven</string>
    <string name="client_name">Elixir Heaven PH (CLIENT)</string>
    <string name="derma_name">Dra. Angelina Saavedra</string>
    <string name="derma_desc">Consultant Dermatologist</string>
    <string name="feu_tech">FEU TECH</string>
    <!-- Library -->
    <string name="definition">DEFINITION:</string>
    <string name="causes">CAUSES:</string>
    <string name="skin_ingred">SUGGESTED SKIN CARE INGREDIENTS:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="skin_consult">"For more accurate information, diagnosis, and suggestions for skin care regimens or products, please consult a medical professional."</string>

    <string name="permission_message">To maximize the seamless experience and features when using the app, SkinCap requires access to the following:\n\n• Camera\n• Storage &amp; Media</string>
    <string name="request_permission">Request Permissions</string>
    <string name="allow_permission">Allow</string>
</resources>
