<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/skin_cap_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_skincap_logo" />

        <TextView
            android:id="@+id/skin_cap_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:text="@string/skin_cap_desc"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skin_cap_logo" />

        <ImageView
            android:id="@+id/pau_dee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            app:layout_constraintTop_toBottomOf="@+id/skin_cap_info"
            app:srcCompat="@drawable/dev_4" />

        <TextView
            android:id="@+id/pau_dee_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/dev_4_name"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/pau_dee"
            app:layout_constraintTop_toBottomOf="@+id/skin_cap_info" />

        <TextView
            android:id="@+id/pau_dee_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/dev_4_desc"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/pau_dee"
            app:layout_constraintTop_toBottomOf="@+id/pau_dee_title" />

        <ImageView
            android:id="@+id/pau_lim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/pau_dee_desc"
            app:srcCompat="@drawable/dev_1" />

        <TextView
            android:id="@+id/pau_lim_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/dev_1_name"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/pau_lim"
            app:layout_constraintTop_toBottomOf="@+id/pau_dee_desc" />

        <TextView
            android:id="@+id/pau_lim_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/dev_1_desc"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/pau_lim"
            app:layout_constraintTop_toBottomOf="@+id/pau_lim_title" />

        <ImageView
            android:id="@+id/jean_limbo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/pau_lim_desc"
            app:srcCompat="@drawable/dev_2" />

        <TextView
            android:id="@+id/jean_limbo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/dev_2_name"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/jean_limbo"
            app:layout_constraintTop_toBottomOf="@+id/pau_lim_desc" />

        <TextView
            android:id="@+id/jean_limbo_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/dev_2_desc"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/jean_limbo"
            app:layout_constraintTop_toBottomOf="@+id/jean_limbo_title" />

        <ImageView
            android:id="@+id/emman_per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/jean_limbo_desc"
            app:srcCompat="@drawable/dev_3" />

        <TextView
            android:id="@+id/emman_per_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/dev_3_name"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/emman_per"
            app:layout_constraintTop_toBottomOf="@+id/jean_limbo_desc" />

        <TextView
            android:id="@+id/emman_per_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/dev_3_desc"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/emman_per"
            app:layout_constraintTop_toBottomOf="@+id/emman_per_title" />

        <TextView
            android:id="@+id/feutech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="100dp"
            android:text="@string/feu_tech"
            android:textColor="@color/siam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emman_per_desc" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>